# era-compiler-tester

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  circuits_bootloader.yul  coverage.yaml  deny.toml  ethereum.yaml  ethereum_evm_interpreter.yaml  ethereum_revm.yaml  recompile_interpreter.sh  system-contracts-stable-build
benchmark_analyzer/: Cargo.toml
benchmark_analyzer/src/: lib.rs  output_format.rs
benchmark_analyzer/src/analysis/: evm_interpreter.rs  mod.rs
benchmark_analyzer/src/analysis/evm_interpreter/: mod.rs
benchmark_analyzer/src/benchmark/: metadata.rs  mod.rs
benchmark_analyzer/src/benchmark/format/: csv.rs  json.rs  mod.rs
benchmark_analyzer/src/benchmark/group/: element.rs  mod.rs  results.rs
benchmark_analyzer/src/benchmark/serialize/: csv.rs
benchmark_analyzer/src/benchmark_analyzer/: arguments.rs  main.rs
benchmark_analyzer/src/benchmark_converter/: arguments.rs  main.rs  tests.rs
benchmark_analyzer/src/format/: csv.rs  mod.rs
benchmark_analyzer/src/format/json/: mod.rs
benchmark_analyzer/src/foundry_report/: mod.rs
benchmark_analyzer/src/foundry_report/contract_report/: deployment.rs  function_report.rs  mod.rs
benchmark_analyzer/src/input/: format.rs  mod.rs  source.rs
benchmark_analyzer/src/input/foundry/: mod.rs
benchmark_analyzer/src/input/foundry_gas/: mod.rs
benchmark_analyzer/src/input/foundry_size/: contract.rs  mod.rs
benchmark_analyzer/src/model/: context.rs  evm_interpreter.rs  mod.rs
benchmark_analyzer/src/model/benchmark/: metadata.rs  mod.rs
benchmark_analyzer/src/model/context/: mod.rs
benchmark_analyzer/src/output/: comparison_result.rs  csv.rs  file.rs  format.rs  mod.rs  xlsx.rs
benchmark_analyzer/src/output/format/: csv.rs  mod.rs
benchmark_analyzer/src/output/json/: mod.rs
benchmark_analyzer/src/output/xlsx/: mod.rs  worksheet.rs
benchmark_analyzer/src/results/: group.rs  mod.rs  run_description.rs
benchmark_analyzer/src/util/: btreemap.rs  mod.rs
benchmark_converter/: Cargo.toml
benchmark_converter/src/: lib.rs  target.rs
benchmark_converter/src/benchmark_converter/: arguments.rs  main.rs  tests.rs
benchmark_converter/src/input/: error.rs  mod.rs
benchmark_converter/src/input/foundry_size/: contract.rs  mod.rs
benchmark_converter/src/model/: mod.rs
benchmark_converter/src/model/benchmark/: mod.rs
benchmark_converter/src/output/: format.rs  json.rs  mod.rs
benchmark_converter/src/output/xlsx/: mod.rs
benchmark_converter/src/results/: run_description.rs
benchmark_converter/src/util/: btreemap.rs  mod.rs
compiler_tester/: Cargo.toml  build.rs
compiler_tester/src/: benchmark_format.rs  environment.rs  filters.rs  lib.rs  llvm_options.rs  target.rs  toolchain.rs  utils.rs  workflow.rs
compiler_tester/src/compiler_tester/: arguments.rs  main.rs
compiler_tester/src/compiler_tester/arguments/: benchmark_format.rs  mod.rs  validation.rs
compiler_tester/src/compilers/: build.rs  eravm.rs  llvm.rs  mod.rs  yul.rs  zkevm.rs
compiler_tester/src/compilers/cache/: mod.rs  value.rs
compiler_tester/src/compilers/downloader/: mod.rs  solc_list.rs
compiler_tester/src/compilers/eravm/: mod.rs  mode.rs
compiler_tester/src/compilers/eravm_assembly/: mod.rs
compiler_tester/src/compilers/llvm/: mod.rs  mode.rs
compiler_tester/src/compilers/llvm_ir/: mod.rs
compiler_tester/src/compilers/mode/: imode.rs  llvm.rs  llvm_options.rs  mod.rs  solidity.rs  vyper.rs  yul.rs  zkevm.rs
compiler_tester/src/compilers/output/: build.rs  mod.rs
compiler_tester/src/compilers/solidity/: cache_key.rs  cached_project.rs  mod.rs  mode.rs  solc_cache_key.rs  subprocess_mode.rs
compiler_tester/src/compilers/vyper/: cache_key.rs  cached_project.rs  mod.rs  mode.rs  subprocess_mode.rs  vyper_cache_key.rs
compiler_tester/src/compilers/yul/: mod.rs  mode.rs  mode_upstream.rs
compiler_tester/src/deployers/: address_predictor.rs  mod.rs  native_deployer.rs  system_contract_deployer.rs
compiler_tester/src/directories/: mod.rs
compiler_tester/src/directories/ethereum/: mod.rs  test.rs
compiler_tester/src/directories/matter_labs/: mod.rs
compiler_tester/src/eravm/: execution_result.rs  mod.rs  system_context.rs  system_contracts.rs
compiler_tester/src/summary/: mod.rs
compiler_tester/src/summary/benchmark_adapters/: input.rs  metadata.rs  mod.rs  mode.rs  selector.rs
compiler_tester/src/summary/element/: mod.rs
compiler_tester/src/test/: description.rs  eravm.rs  evm.rs  instance.rs  mod.rs  selector.rs
compiler_tester/src/test/case/: mod.rs
compiler_tester/src/test/context/: case.rs  input.rs  mod.rs
compiler_tester/src/test/instance/: eravm.rs  evm.rs  mod.rs
compiler_tester/src/utils/: mod.rs  timer.rs
compiler_tester/src/vm/: address_iterator.rs  execution_result.rs  mod.rs
compiler_tester/src/vm/eravm/: address_iterator.rs  circuits_vm.rs  input.rs  lambda_vm_adapter.rs  mod.rs  system_context.rs  system_contracts.rs  vm2_adapter.rs
compiler_tester/src/vm/evm/: address_iterator.rs  address_predictor.rs  invoker.rs  mod.rs  output.rs  runtime.rs
compiler_tester/src/vm/revm/: address_iterator.rs  balance.rs  init.rs  input.rs  mod.rs  revm_type_conversions.rs
compiler_tester/src/zkevm/: execution_result.rs  mod.rs  system_context.rs  system_contracts.rs
coverage_watcher/: Cargo.toml
coverage_watcher/src/: directory.rs  ignore_file.rs  index.rs  lib.rs
coverage_watcher/src/coverage_watcher/: arguments.rs  main.rs
fuzzer/: Cargo.toml  README.md  build.rs
fuzzer/fuzz_targets/: common.rs  demo.rs  optimizer_bug.rs
solidity_adapter/: Cargo.toml
solidity_adapter/src/: lib.rs
solidity_adapter/src/index/: changes.rs  conflicts.rs  directory.rs  enabled.rs  mod.rs  test_file.rs
solidity_adapter/src/test/: mod.rs
solidity_adapter/src/test/function_call/: event.rs  gas_option.rs  mod.rs
solidity_adapter/src/test/params/: abi_encoder_v1_only.rs  allow_non_existing_functions.rs  compile_to_ewasm.rs  compile_via_yul.rs  evm_version.rs  mod.rs  revert_strings.rs
solidity_adapter/src/tests_updater/: arguments.rs  main.rs
(+371 files in other folders)
