[workspace]
members = [
    "compiler_tester",
    "solidity_adapter",
    "coverage_watcher",
    "benchmark_converter",
    # "fuzzer"
]
resolver = "2"

[workspace.package]
authors = [
    "The Matter Labs Team <hello@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
version = "2.0.0"