[package]
name = "benchmark-analyzer"
version = "2.0.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Igor Zhirkov <iz@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Benchmark analyzer for LLVM-based compilers"

[[bin]]
name = "benchmark-analyzer"
path = "src/benchmark_analyzer/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "3.0"
regex = "1.11"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
chrono = { version = "0.4", features = [ "serde", "clock" ] }

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
