[package]
name = "benchmark-analyzer"
description = "Benchmark analyzer for LLVM-based compilers"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "benchmark-analyzer"
path = "src/benchmark_analyzer/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "3.0"
regex = "1.11"

serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
chrono = { version = "0.4", features = [ "serde", "clock" ] }

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
