[package]
name = "compiler-tester"
description = "Integration testing framework for LLVM-based compilers"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "compiler-tester"
path = "src/compiler_tester/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
which = "7.0"
colored = "3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
md5 = "0.7"
hex = "0.4"
sha3 = "0.10"
ron = "0.9"
rlp = "0.5"
regex = "1.11"
glob = "0.3"
semver = { version = "1.0", features = ["serde"] }
itertools = "0.4"
once_cell = "1.20"
rayon = "1.10"
lazy_static = "1.5"
bincode = "1.3"
chrono = "0.4"

revm = { git = "https://github.com/bluealloy/revm", rev = "fa5650ee8a4d802f4f3557014dd157adfb074460" }

zkevm_opcode_defs = "=0.150.6"
zkevm_tester = { git = "https://github.com/0xVolosnikov/era-zkevm_tester", rev = "ba284e1641bfa9290a43b8194e5142938a055a99" }
vm2 = { git = "https://github.com/matter-labs/vm2", optional = true, package = "zksync_vm2" }

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-downloader = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "main" }
era-compiler-solidity = { git = "https://github.com/matter-labs/era-compiler-solidity", branch = "main" }
era-solc = { git = "https://github.com/matter-labs/era-compiler-solidity", branch = "main" }
era-compiler-vyper = { git = "https://github.com/matter-labs/era-compiler-vyper", branch = "main" }
solx-standard-json = { git = "https://github.com/matter-labs/solx", branch = "main" }

solidity-adapter = { path = "../solidity_adapter" }
benchmark-analyzer = { path = "../benchmark_analyzer" }

[dependencies.web3]
git = "https://github.com/jacques-kigo/rust-web3"
branch = "master"
default-features = false
features = ["http-rustls-tls", "test", "signing"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking"]

[dependencies.inkwell]
git = "https://github.com/matter-labs-forks/inkwell"
branch = "llvm-19"
default-features = false
features = [
    "llvm19-1",
    "serde",
    "no-libffi-linking",
    "target-eravm",
    "target-evm",
]
