[package]
name = "coverage-watcher"
version = "1.5.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Dyadyuk <a.dyadyuk@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "ZKsync toolchain test coverage watcher"

[[bin]]
name = "coverage-watcher"
path = "src/coverage_watcher/main.rs"

[dependencies]
structopt = { version = "=0.3.26", default-features = false }
anyhow = "=1.0.89"

serde = { version = "=1.0.210", features = [ "derive" ] }
serde_yaml = "=0.9.34"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
