[package]
name = "coverage-watcher"
version = "2.0.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Dyadyuk <a.dyadyuk@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Test coverage watcher for LLVM-based compilers"

[[bin]]
name = "coverage-watcher"
path = "src/coverage_watcher/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
