[package]
name = "coverage-watcher"
description = "Test coverage watcher for LLVM-based compilers"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[[bin]]
name = "coverage-watcher"
path = "src/coverage_watcher/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
