[package]
name = "compiler-tester-fuzz"
version = "1.5.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Baliasnikov <aba@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "demo"
path = "fuzz_targets/demo.rs"
test = false
doc = false
bench = false

[[bin]]
name = "optimizer_bug"
path = "fuzz_targets/optimizer_bug.rs"
test = false
doc = false
bench = false

[dependencies]
libfuzzer-sys = "0.4"
anyhow = "1.0"
semver = { version = "1.0", features = ["serde"] }

zkevm_tester = { git = "https://github.com/matter-labs/era-zkevm_tester", branch = "az-cpr-1735-migrate-to-the-new-assembler" }

era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "az-cpr-1735-migrate-to-the-new-assembler" }
era-compiler-solidity = { git = "https://github.com/matter-labs/era-compiler-solidity", branch = "az-cpr-1735-migrate-to-the-new-assembler" }

compiler-tester = { path = "../compiler_tester" }
solidity-adapter = { path = "../solidity_adapter" }
