[package]
name = "compiler-tester-fuzz"
version = "1.5.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Baliasnikov <aba@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "demo"
path = "fuzz_targets/demo.rs"
test = false
doc = false
bench = false

[[bin]]
name = "optimizer_bug"
path = "fuzz_targets/optimizer_bug.rs"
test = false
doc = false
bench = false

[dependencies]
anyhow = "=1.0.89"
semver = { version = "=1.0.23", features = ["serde"] }

libfuzzer-sys = "=0.4.7"

zkevm_tester = { git = "https://github.com/matter-labs/era-zkevm_tester", branch = "v1.5.0" }

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }
era-compiler-llvm-context = { git = "https://github.com/matter-labs/era-compiler-llvm-context", branch = "main" }
era-compiler-solidity = { git = "https://github.com/matter-labs/era-compiler-solidity", branch = "main" }
era-solc = { git = "https://github.com/matter-labs/era-compiler-solidity", branch = "main" }

compiler-tester = { path = "../compiler_tester" }
solidity-adapter = { path = "../solidity_adapter" }
