[package]
name = "solidity-adapter"
version = "1.5.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Dyadyuk <a.dyadyuk@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "The Ethereum Solidity tests adapter"

[[bin]]
name = "tests-updater"
path = "src/tests_updater/main.rs"

[lib]
doctest = false

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
colored = "2.0"

serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"
semver = { version = "1.0", features = [ "serde" ] }
regex = "1.9"
md5 = "0.7"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.web3]
version = "0.19"
default-features = false
features = ["http-rustls-tls", "test", "signing"]
