[package]
name = "solidity-adapter"
version = "1.5.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Dyadyuk <a.dyadyuk@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "ZKsync toolchain adapter for Ethereum Solidity tests"

[[bin]]
name = "tests-updater"
path = "src/tests_updater/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "=4.5.21", features = ["derive"] }
anyhow = "=1.0.89"
colored = "=2.1.0"

serde = { version = "=1.0.210", features = [ "derive" ] }
serde_yaml = "=0.9.34"
semver = { version = "=1.0.23", features = [ "serde" ] }
regex = "=1.11.0"
md5 = "=0.7.0"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.web3]
git = "https://github.com/jacques-kigo/rust-web3"
branch = "master"
default-features = false
features = ["http-rustls-tls", "test", "signing"]
