[package]
name = "solidity-adapter"
version = "2.0.0"
authors = [
    "Oleksandr Zarudnyi <a.zarudnyy@matterlabs.dev>",
    "Anton Dyadyuk <a.dyadyuk@matterlabs.dev>",
]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Solidity test adapter for LLVM-based compilers"

[[bin]]
name = "tests-updater"
path = "src/tests_updater/main.rs"

[lib]
doctest = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "3.0"

serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"
semver = { version = "1.0", features = [ "serde" ] }
regex = "1.11"
md5 = "0.7"

era-compiler-common = { git = "https://github.com/matter-labs/era-compiler-common", branch = "main" }

[dependencies.web3]
git = "https://github.com/jacques-kigo/rust-web3"
branch = "master"
default-features = false
features = ["http-rustls-tls", "test", "signing"]
